--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,15 @@ body {
   background-color: #e4e4e4dd;
 }
 
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.animate-fadeIn {
+  animation: fadeIn 1s forwards;
+}
