--- a/src/index.css
+++ b/src/index.css
@@ -21,12 +21,43 @@ body {
 }
 
 .acceuil{
-  background: url('../public/home.jpg') ;
-  background-size: cover;
+  background-image: 
+    linear-gradient(#00000086, #00000086), 
+    url('../public/home.jpg');
+  background-size: cover; 
+  background-position: center;
 }
 
 .home{
-  background: url('../public/bg.jpg') ;
-  background-size: cover;
+  background-image: 
+    linear-gradient(#0000008f, #0000008f), 
+    url('../public/bg.jpg');
+  background-size: cover; 
+  background-position: center;
 }
 
+/* Styles pour Webkit (Chrome, Safari, Edge) */
+::-webkit-scrollbar {
+  width: 8px; /* Largeur du scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: #ffffff; /* Arrière-plan blanc pour la piste */
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(180deg, #0056b3, #007bff); /* Dégradé bleu */
+  border-radius: 10px; /* Arrondi des coins du thumb */
+  border: 2px solid #ffffff; /* Bordure blanche */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(180deg, #003f8a, #0056b3); /* Dégradé bleu plus foncé au survol */
+}
+
+/* Styles pour Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #007bff #ffffff; /* Barre en bleu avec fond blanc */
+}
